--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>struts2-core</artifactId>
             <version>${struts2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-convention-plugin</artifactId>
+            <version>${struts2.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>javax.servlet</groupId>
