struts2 约定优于配置

--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,19 @@
             <artifactId>struts2-core</artifactId>
             <version>${struts2.version}</version>
         </dependency>
+        <!-- 约定插件 -->
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-convention-plugin</artifactId>
             <version>${struts2.version}</version>
         </dependency>
+        <!--  查看项目Action信息 /config-browser/actionNames.action -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-config-browser-plugin</artifactId>
+            <version>${struts2.version}</version>
+        </dependency>
+
 
 
         <dependency>
