--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,18 @@
             <version>${struts2.version}</version>
         </dependency>
 
+        <!-- http://5563447.blog.51cto.com/5553447/1261520 -->
+        <!-- tomcat7 对应servlet-api 3.0, jsp-api 2.2-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
             <scope>provided</scope>
         </dependency>
 
