--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>struts2-core</artifactId>
             <version>${struts2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-json-plugin</artifactId>
+            <version>${struts2.version}</version>
+        </dependency>
 
         <!-- http://5563447.blog.51cto.com/5553447/1261520 -->
         <!-- tomcat7 对应servlet-api 3.0, jsp-api 2.2-->
